[tool.poetry]
name = "wallet"
version = "3.0.0a0"
description = "Personal finance service"
authors = ["Kirill Sumorokov <sumorokov.k@gmail.com>"]
license = "MIT"
packages = [
    { include = "wallet", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
click = "^8.1.3"
marshmallow = "^3.18.0"
prometheus-client = "^0.14.1"
structlog = "^22.1.0"
ujson = "^5.5.0"
uvloop = "^0.17.0"
flake8 = "^4.0.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8-aaa = "^0.12.2"
flake8-bugbear = "^22.9.23"
flake8-builtins-unleashed = "^1.3.1"
flake8-comprehensions = "^3.10.0"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
flake8-print = "^5.0.0"
flake8-pytest = "^1.4"
mypy = "^0.971"
pytest = "^7.1.3"
pytest-aiohttp = "^1.0.4"
pytest-black = "^0.3.12"
pytest-cov = "^3.0.0"
pytest-flake8 = "^1.1.1"
pytest-mock = "^3.8.2"
pytest-mypy = "^0.9.1"
pytest-xdist = "^2.5.0"
types-setuptools = "^65.3.0"
types-ujson = "^5.5.0"

[tool.poetry.group.debug.dependencies]
ipdb = "^0.13.9"
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
